--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@asymmetrik/ngx-leaflet": "^3.0.2",
+    "@types/plotly.js": "^1.37.1",
     "core-js": "^2.4.1",
     "leaflet": "^1.3.1",
-    "plotly.js": "^1.35.2",
+    "plotly.js": "^1.38.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
