--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,14 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "types": [
+      "plotly.js"
+    ],"paths": {
+      "plotly.js": [
+        "../node_modules/plotly.js/dist/plotly-basic.js"
+      ]
+    }
   }
+  
 }
